Change log
==========

1.0 (unreleased)
----------------

- replaced several methods with better alternatives from python-ldap,
  which also requires upping the dependency to python-ldap>=2.3.0, 
  and fixing up the tests.

- pare down fakeldap to not try and provide all kinds of constants 
  from python-ldap, but just a LDAP connection class.

- add a new method "bind" to rebind a connection, if the last bind
  differs from the desired bind.

- rename variable name "filter" with "fltr" to stop shadowing the 
  Python function "filter".

- added an interfaces file as documentation and "contract". This adds 
  a dependency on zope.interface.

- removed unused argument "login_attr" from constructor argument list

- LDAPConnection objects now accept more than a single server definition.
  Failover between connections is triggered by connection or operation
  timeouts. Added API to add and remove server definitions at runtime.

- all those methods causing LDAP operations to be performed accept 
  optional bind_dn and bind_pwd named arguments to rebind with the 
  provided credentials instead of those credentials stored in the 
  LDAPConnection instance. This represents an API change for the 
  `insert`, `modify` and `delete` methods.


0.4 (2008-12-25)
----------------

- fakeldap bug: the modify_s method would expect changes of type MOD_DELETE
  to come with a list of specific attribute values to delete. Now the 
  attribute will be deleted as a whole if the expected list is None, this
  reflects actual python-ldap behavior better.

- now we are exercising the fakeldap doctests from within this package,
  they used to be run from Products.LDAPUserFolder, which was not cleaned
  up when the fakeldap module moved to dataflake.ldapconnection.

0.3 (2008-08-30)
----------------

- fakeldap: no longer override the LDAP exceptions, just get them from
  python-ldap.
  (http://www.dataflake.org/tracker/issue_00620)


0.2 (2008-08-27)
----------------
